# chrome_extension_installer

./: Cargo.toml  README.md
src/: lib.rs  linux.rs  macos.rs  windows.rs
